--- a/main.scss
+++ b/main.scss
@@ -1,63 +1,17 @@
-a {
-  -moz-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-  -webkit-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-  -ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-  transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-  border-bottom: dotted 1px;
-  color: inherit;
-  text-decoration: none;
-}
-a {
-  a:hover {
-    border-bottom-color: transparent;
-    color: #9bf1ff !important;
-  }
+/* Error: expected "{".
+ *   ,
+ * 1 | <!doctype html>
+ *   |  ^
+ *   '
+ *   aboutus.html 1:2  root stylesheet */
 
-  a:active {
-    color: #53e3fb !important;
-  }
-}
-h1, h2, h3, h4, h5, h6 {
-  color: #ffffff;
-  font-weight: 600;
-  line-height: 1.65;
-  margin: 0 0 1em 0;
-}
-h1 {
-  font-size: 2.5em;
-}
-
-h2 {
-  font-size: 1.75em;
-}
-
-h3 {
-  font-size: 1.35em;
-}
-
-h4 {
-  font-size: 1.1em;
-}
-
-h5 {
-  font-size: 0.9em;
-}
-
-h6 {
-  font-size: 0.7em;
-}
-@media screen and (max-width: 736px) {
-
-  h1 {
-    font-size: 2em;
-  }
-
-  h2 {
-    font-size: 1.5em;
-  }
-
-  h3 {
-    font-size: 1.25em;
-  }
-
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "{".\a   \2577 \a 1 \2502  <!doctype html>\a   \2502   ^\a   \2575 \a   aboutus.html 1:2  root stylesheet';
 }
