change the color of the h tags

--- a/main.scss
+++ b/main.scss
@@ -18,7 +18,7 @@ a {
   }
 }
 h1, h2, h3, h4, h5, h6 {
-  color: #ffffff;
+  color: #1d1c1c;
   font-weight: 600;
   line-height: 1.65;
   margin: 0 0 1em 0;
