Parallax main.css

--- a/main.css
+++ b/main.css
@@ -87,5 +87,18 @@ input[type=submit] {
   .column, input[type=submit] {
     width: 100%;
     margin-top: 0; } }
+/*-------------------- INDEX-LAYOUT------------------------------------------*/
+.parallax {
+  /* The image used */
+  background-image: url("image1.jpg");
+  /* Set a specific height */
+  min-height: 500px;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+/*-------------------------------------------------------------------------*/
 
 /*# sourceMappingURL=main.css.map */
