--- a/main.scss
+++ b/main.scss
@@ -114,3 +114,20 @@ input[type=submit]:hover {
     margin-top: 0;
   }
 }
+
+/*-------------------- INDEX-LAYOUT------------------------------------------*/
+.parallax {
+  /* The image used */
+  background-image: url("image1.jpg");
+
+  /* Set a specific height */
+  min-height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+/*-------------------------------------------------------------------------*/
+
