--- a/main.scss
+++ b/main.scss
@@ -118,7 +118,7 @@ input[type=submit]:hover {
 /*-------------------- INDEX-LAYOUT------------------------------------------*/
 .parallax {
   /* The image used */
-  background-image: url("image1.jpg");
+  background-image: url("resources/image1.jpg");
 
   /* Set a specific height */
   min-height: 500px;
