--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 a {
   -moz-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   -webkit-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
@@ -113,7 +112,7 @@ input[type=submit] {
 }
 .parallax {
   /* The image used */
-  background-image: url("image1.jpg");
+  background-image: url("resources/image1.jpg");
   /* Set a specific height */
   min-height: 500px;
   /* Create the parallax scrolling effect */
@@ -126,51 +125,3 @@ input[type=submit] {
 /*-------------------------------------------------------------------------*/
 
 /*# sourceMappingURL=main.css.map */
-=======
-/*
-Error: Invalid CSS after "  color: #1d1c1c": expected "{", was ";"
-        on line 23 of main.scss
-
-18:   }
-19: }
-20: h1, h2, h3, h4, h5, h6 {
-21: <<<<<<< HEAD
-22: =======
-23:   color: #1d1c1c;
-24: >>>>>>> dc1c293874d654e671f885af1c6a4ee40bb04de7
-25:   font-weight: 600;
-26:   line-height: 1.65;
-27:   margin: 0 0 1em 0;
-28: }
-
-Backtrace:
-main.scss:23
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1308:in `expected'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1238:in `expected'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1233:in `tok!'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:688:in `block'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:758:in `declaration_or_ruleset'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:708:in `block_child'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:697:in `block_contents'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:689:in `block'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:681:in `ruleset'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:707:in `block_child'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:700:in `block_contents'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:137:in `stylesheet'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:41:in `parse'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/engine.rb:414:in `_to_tree'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/engine.rb:307:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/exec/sass_scss.rb:387:in `run'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/exec/sass_scss.rb:63:in `process_result'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/exec/base.rb:50:in `parse'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/lib/sass/exec/base.rb:18:in `parse!'
-/Library/Ruby/Gems/2.6.0/gems/sass-3.7.4/bin/sass:13:in `<top (required)>'
-/usr/local/bin/sass:23:in `load'
-/usr/local/bin/sass:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"  color: #1d1c1c\": expected \"{\", was \";\"\A         on line 23 of main.scss\A \A 18:   }\A 19: }\A 20: h1, h2, h3, h4, h5, h6 {\A 21: <<<<<<< HEAD\A 22: =======\A 23:   color: #1d1c1c;\A 24: >>>>>>> dc1c293874d654e671f885af1c6a4ee40bb04de7\A 25:   font-weight: 600;\A 26:   line-height: 1.65;\A 27:   margin: 0 0 1em 0;\A 28: }"; }
->>>>>>> 1f314a187eabf9e94de3611293679c8963e24520
