--- a/main.scss
+++ b/main.scss
@@ -116,7 +116,7 @@ input[type=submit]:hover {
 }
 
 
-
+/*-------------------------HOME PAGE-----------------------------*/
 
 .parallax {
   /* The image used */
@@ -130,6 +130,31 @@ input[type=submit]:hover {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.wrap-center{
+  margin: 0 auto;
+  position: relative;
+  max-width: 73.231em;
+}
+
+.banner-centered {
+  text-align: center;
+  position: absolute;
+  display: block;
+  max-width: 75.231em;
+  height: inherit;
+  overflow: hidden;
+  margin-top: 100px;
+}
+
+.banner-centered h2 {
+  font-size: 5.385em;
+  line-height: 1.5;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #fafafa;
+  font-weight: 100;
+  display: block;
 }
 /*-------------------------------------------------------------------------*/
 
