add service to the web

--- a/main.css
+++ b/main.css
@@ -122,6 +122,6 @@ input[type=submit] {
   background-size: cover;
 }
 
-/*-------------------------------------------------------------------------*/
+/*-----services style------*/
 
 /*# sourceMappingURL=main.css.map */
