--- a/main.scss
+++ b/main.scss
@@ -132,5 +132,6 @@ input[type=submit]:hover {
   background-repeat: no-repeat;
   background-size: cover;
 }
-/*-------------------------------------------------------------------------*/
+/*-----services style------*/
+
 
