--- a/main.css
+++ b/main.css
@@ -1,14 +1,3 @@
-<<<<<<< HEAD
-a {
-  -moz-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-  -webkit-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-  -ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-  transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-  border-bottom: dotted 1px;
-  color: inherit;
-  text-decoration: none; }
-=======
-@charset "UTF-8";
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono", "Droid Sans Mono", monospace, monospace;
   white-space: pre;
@@ -16,9 +5,7 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: 'Error: expected "{".\a   ╷\a 1 │ <!doctype html>\a   │  ^\a   ╵\a   aboutus.html 1:2  root stylesheet';
-}
->>>>>>> 959c2c2e0fd0306fdc03afdb3a7311f83022bf33
+  content: 'Error: expected "{".\a   \2577 \a 1 \2502  <!doctype html>\a   \2502   ^\a   \2575 \a   aboutus.html 1:2  root stylesheet'; }
 
 a a:hover {
   border-bottom-color: transparent;
