--- a/main.scss
+++ b/main.scss
@@ -134,6 +134,11 @@ input[type=submit]:hover {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.small-im{
+  width: 4rem;
+  padding-bottom:1rem;
+}
 /*-----services style------*/
 
 
