Made map & cols responsive

--- a/main.scss
+++ b/main.scss
@@ -64,6 +64,21 @@ h6 {
 
 }
 
+.map-responsive{
+  overflow:hidden;
+  padding-bottom:75%;
+  position:relative;
+  height:0;
+}
+
+.map-responsive iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+}
+
 /* ---------------------------------START OF CONTACT FORM */
 * {
   box-sizing: border-box;
