--- a/main.css
+++ b/main.css
@@ -59,6 +59,21 @@ h6 {
     font-size: 1.25em;
   }
 }
+.map-responsive {
+  overflow: hidden;
+  padding-bottom: 75%;
+  position: relative;
+  height: 0;
+}
+
+.map-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
 /* ---------------------------------START OF CONTACT FORM */
 * {
   box-sizing: border-box;
