--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
 body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono", "Droid Sans Mono", monospace, monospace;
   white-space: pre;
   display: block;
   padding: 1em;
@@ -15,11 +14,16 @@ a a:active {
   color: #53e3fb !important;
 }
 
+.container {
+  font-family: "Roboto Slab", serif;
+}
+
 h1, h2, h3, h4, h5, h6 {
   color: #1d1c1c;
   font-weight: 600;
   line-height: 1.65;
   margin: 0 0 1em 0;
+  font-family: "Roboto Slab", serif;
 }
 
 h1 {
