--- a/main.css
+++ b/main.css
@@ -4,65 +4,50 @@ body::before {
   display: block;
   padding: 1em;
   margin-bottom: 1em;
-  border-bottom: 2px solid black;
-}
+  border-bottom: 2px solid black; }
 
 a a:hover {
   border-bottom-color: transparent;
-  color: #9bf1ff !important;
-}
+  color: #9bf1ff !important; }
 a a:active {
-  color: #53e3fb !important;
-}
+  color: #53e3fb !important; }
 
 h1, h2, h3, h4, h5, h6 {
   color: #1d1c1c;
   font-weight: 600;
   line-height: 1.65;
-  margin: 0 0 1em 0;
-}
+  margin: 0 0 1em 0; }
 
 h1 {
-  font-size: 2.5em;
-}
+  font-size: 2.5em; }
 
 h2 {
-  font-size: 1.75em;
-}
+  font-size: 1.75em; }
 
 h3 {
-  font-size: 1.35em;
-}
+  font-size: 1.35em; }
 
 h4 {
-  font-size: 1.1em;
-}
+  font-size: 1.1em; }
 
 h5 {
-  font-size: 0.9em;
-}
+  font-size: 0.9em; }
 
 h6 {
-  font-size: 0.7em;
-}
+  font-size: 0.7em; }
 
 @media screen and (max-width: 736px) {
   h1 {
-    font-size: 2em;
-  }
+    font-size: 2em; }
 
   h2 {
-    font-size: 1.5em;
-  }
+    font-size: 1.5em; }
 
   h3 {
-    font-size: 1.25em;
-  }
-}
+    font-size: 1.25em; } }
 /* ---------------------------------START OF CONTACT FORM */
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 /* Style inputs */
 input[type=text], select, textarea {
@@ -71,44 +56,37 @@ input[type=text], select, textarea {
   border: 1px solid #ccc;
   margin-top: 6px;
   margin-bottom: 16px;
-  resize: vertical;
-}
+  resize: vertical; }
 
 input[type=submit] {
   color: white;
   padding: 12px 20px;
   border: none;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 /* Style the container/contact section */
 .container {
   border-radius: 5px;
-  padding: 10px;
-}
+  padding: 10px; }
 
 /* Create two columns that float next to eachother */
 .column {
   float: left;
   width: 50%;
   margin-top: 6px;
-  padding: 20px;
-}
+  padding: 20px; }
 
 /* Clear floats after the columns */
 .row:after {
   content: "";
   display: table;
-  clear: both;
-}
+  clear: both; }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .column, input[type=submit] {
     width: 100%;
-    margin-top: 0;
-  }
-}
+    margin-top: 0; } }
 /*-------------------------HOME PAGE-----------------------------*/
 .parallax {
   /* The image used */
@@ -119,20 +97,22 @@ input[type=submit] {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
-}
+  background-size: cover; }
 
 .small-im {
   width: 4rem;
-  padding-bottom: 1rem;
-}
+  padding-bottom: 1rem; }
 
+@media only screen and (max-width: 600px) {
+  .col {
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px; } }
 /*-----services style------*/
 .wrap-center {
   margin: 0 auto;
   position: relative;
-  max-width: 73.231em;
-}
+  max-width: 73.231em; }
 
 .banner-centered {
   text-align: center;
@@ -141,8 +121,7 @@ input[type=submit] {
   max-width: 75.231em;
   height: inherit;
   overflow: hidden;
-  margin-top: 100px;
-}
+  margin-top: 100px; }
 
 .banner-centered h2 {
   font-size: 5.385em;
@@ -151,18 +130,15 @@ input[type=submit] {
   letter-spacing: 2px;
   color: #fafafa;
   font-weight: 100;
-  display: block;
-}
+  display: block; }
 
 /*-------------------------------------------------------------------------*/
 /* image for page about us */
 .aboutus1 {
-  width: 100%;
-}
+  width: 100%; }
 
 /* ---------------------BLOG--------------------*/
 .flex1 {
-  flex-grow: 1;
-}
+  flex-grow: 1; }
 
 /*# sourceMappingURL=main.css.map */
