--- a/main.scss
+++ b/main.scss
@@ -135,6 +135,8 @@ input[type=submit]:hover {
     width: 100%;
     margin-top: 0;
   }
+  #banner-text{font-size: small}
+  #hiddedM{display: none;}
 }
 
 /*-------------------------HOME PAGE-----------------------------*/
