making footer more responsive

--- a/main.scss
+++ b/main.scss
@@ -136,7 +136,7 @@ input[type=submit]:hover {
     margin-top: 0;
   }
   #banner-text{font-size: small}
-  #hiddedM{display: none;}
+  .hiddedM{display: none;}
 }
 
 /*-------------------------HOME PAGE-----------------------------*/
