changes layout and content

--- a/main.css
+++ b/main.css
@@ -155,10 +155,15 @@ input[type=submit] {
 }
 
 /*-------------------------------------------------------------------------*/
-/* image for page about us */
+/* image for page about us
 .aboutus1 {
-  width: 100%;
-}
+width: 100%;
+} */
+/*
+
+
+
+
 
 /* ---------------------BLOG--------------------*/
 .flex1 {
