added correct fonttype and made links open in new window

--- a/main.css
+++ b/main.css
@@ -203,4 +203,8 @@ input[type=submit] {
   margin-right: 20px;
 }
 
+#otherfont {
+  font-family: "Roboto Slab", serif;
+}
+
 /*# sourceMappingURL=main.css.map */
