Trying to fix responsiveness in index.html

--- a/main.css
+++ b/main.css
@@ -173,7 +173,6 @@ width: 100%;
   margin-right: 20px; }
 
 #otherfont {
-  font-family: "Roboto Slab", serif;
-}
+  font-family: "Roboto Slab", serif; }
 
 /*# sourceMappingURL=main.css.map */
