--- a/main.scss
+++ b/main.scss
@@ -160,11 +160,9 @@ input[type=submit]:hover {
   width: 4rem;
   padding-bottom:1rem;
 }
-@media only screen and (max-width: 600px) {
-  .col{
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
+@media screen and (max-width: 600px) {
+  .hiddedM{
+    display: none;
   }
 }
 
