--- a/main.css
+++ b/main.css
@@ -128,6 +128,23 @@ input[type=submit] {
 @media screen and (max-width: 600px) {
   .hiddedM {
     display: none; } }
+div.animation {
+  position: relative;
+  animation-name: cycling;
+  animation-duration: 4s;
+  animation-iteration-count: 1; }
+
+@keyframes cycling {
+  0% {
+    left: 0px; }
+  25% {
+    left: 25%; }
+  50% {
+    left: 50%; }
+  75% {
+    left: 75%; }
+  100% {
+    left: 100%; } }
 /*-----services style------*/
 .list-style li {
   list-style: none; }
