--- a/main.css
+++ b/main.css
@@ -237,10 +237,6 @@ width: 100%;
   flex-grow: 1;
 }
 
-.text_spacingblog {
-  margin-right: 20px;
-}
-
 #otherfont {
   font-family: "Roboto Slab", serif;
 }
@@ -280,6 +276,14 @@ width: 100%;
   -webkit-animation: linear infinite alternate;
   -webkit-animation-name: run;
   -webkit-animation-duration: 5s;
+}
+
+.padding1 {
+  padding-right: 10px;
+}
+
+.padding2 {
+  padding-left: 10px;
 }
 
 /*# sourceMappingURL=main.css.map */
