--- a/main.scss
+++ b/main.scss
@@ -243,10 +243,6 @@ width: 100%;
   flex-grow:1;
 }
 
-.text_spacingblog {
-  margin-right: 20px;
-}
-
 #otherfont {
   font-family: "Roboto Slab", serif;
 }
@@ -271,6 +267,14 @@ width: 100%;
   -webkit-animation:linear infinite alternate;
   -webkit-animation-name: run;
   -webkit-animation-duration: 5s;
+}
+
+.padding1 {
+  padding-right: 10px;
+}
+
+.padding2 {
+  padding-left: 10px;
 }
 
 
