--- a/main.scss
+++ b/main.scss
@@ -195,9 +195,15 @@ div.animation{
 }
 
 /*-----services style------*/
+
+h5-size {
+  font-size: 2em;
+}
+
 .list-style li {
   list-style: none;
 }
+
 .wrap-center{
   margin: 0 auto;
   position: relative;
