--- a/main.scss
+++ b/main.scss
@@ -28,6 +28,10 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 0 1em 0;
   font-family: 'Roboto Slab', serif;
 }
+p{
+  color: #1d1c1c;
+}
+
 
 h1 {
   font-size: 2.5em;
