slowed down animation

--- a/main.scss
+++ b/main.scss
@@ -274,9 +274,9 @@ width: 100%;
   width: 100px;
   height: 100px;
   position: relative;
-  -webkit-animation:linear infinite alternate;
+  -webkit-animation:linear infinite;
   -webkit-animation-name: run;
-  -webkit-animation-duration: 5s;
+  -webkit-animation-duration: 12s;
 }
 
 
