--- a/main.scss
+++ b/main.scss
@@ -272,7 +272,7 @@ width: 100%;
 a > .ico {
   background-color: grey;
   padding: 10px;
-
+}
 
 /* ---------------------BLOG--------------------*/
 .flex1 {
@@ -296,6 +296,7 @@ a > .ico {
   50%{ left : 50%;}
   100%{ left: 100%;}
 }
+
 .bycicleani {
   width: 100px;
   height: 100px;
