change the size of the images

--- a/main.css
+++ b/main.css
@@ -126,6 +126,10 @@ input[type=submit] {
   padding: 10px;
 }
 
+.btn {
+  font-family: "Roboto Slab", serif;
+}
+
 /* Create two columns that float next to eachother */
 .column {
   float: left;
