--- a/main.scss
+++ b/main.scss
@@ -134,6 +134,9 @@ input[type=submit]:hover {
   border-radius: 5px;
   padding: 10px;
 }
+.btn {
+  font-family: 'Roboto Slab', serif;
+}
 
 /* Create two columns that float next to eachother */
 .column {
