--- a/main.css
+++ b/main.css
@@ -14,8 +14,12 @@ a a:active {
 .container {
   font-family: 'Roboto Slab', serif; }
 
+a.navbar-brand {
+  font-weight: 600;
+  color: #0275d8; }
+
 h1, h2, h3, h4, h5, h6 {
-  color: #1d1c1c;
+  color: #0275d8;
   font-weight: 600;
   line-height: 1.65;
   margin: 0 0 1em 0;
@@ -103,8 +107,7 @@ input[type=submit] {
   padding: 10px; }
 
 .btn {
-  font-family: "Roboto Slab", serif;
-}
+  font-family: 'Roboto Slab', serif; }
 
 /* Create two columns that float next to eachother */
 .column {
