--- a/main.scss
+++ b/main.scss
@@ -21,8 +21,13 @@ a {
   font-family: 'Roboto Slab', serif;
 }
 
+a.navbar-brand{
+  font-weight: 600;
+  color: #0275d8;
+}
+
 h1, h2, h3, h4, h5, h6 {
-  color: #1d1c1c;
+  color: #0275d8;
   font-weight: 600;
   line-height: 1.65;
   margin: 0 0 1em 0;
