added social media icons

--- a/main.css
+++ b/main.css
@@ -319,4 +319,16 @@ a > .ico {
   -webkit-animation-duration: 12s;
 }
 
+#facebook {
+  font-size: 30px;
+}
+
+#twitter {
+  font-size: 30px;
+}
+
+#instagram {
+  font-size: 30px;
+}
+
 /*# sourceMappingURL=main.css.map */
