--- a/main.scss
+++ b/main.scss
@@ -306,5 +306,14 @@ a > .ico {
   -webkit-animation-duration: 12s;
 }
 
+#facebook {
+  font-size: 30px;
+}
+#twitter {
+  font-size: 30px;
+}
+#instagram {
+  font-size: 30px;
+}
 
 
