--- a/main.css
+++ b/main.css
@@ -119,7 +119,7 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-  color: white;
+  color: whitesmoke;
   padding: 12px 20px;
   border: none;
   cursor: pointer;
