--- a/main.scss
+++ b/main.scss
@@ -125,7 +125,7 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-  color: white;
+  color: whitesmoke;
   padding: 12px 20px;
   border: none;
   cursor: pointer;
