--- a/main.scss
+++ b/main.scss
@@ -202,15 +202,11 @@ div.animation{
 }
 
 @keyframes cycling {
-  0%   {left:0px;}
+  0%   {left:0;}
   100% {left:75%;}
 }
 
 /*-----services style------*/
-
-h5-size {
-  font-size: 2em;
-}
 
 .list-style li {
   list-style: none;
@@ -281,12 +277,9 @@ a > .ico {
   background-color: grey;
   padding: 10px;
 }
-<<<<<<< HEAD
 a:hover > .ico {
   background-color: #666;
 }
-=======
->>>>>>> 460c87a3dce9162da5c0941114de8856c5a0c890
 
 /* ---------------------BLOG--------------------*/
 .flex1 {
@@ -298,7 +291,7 @@ a:hover > .ico {
 }
 
 @keyframes bycicle {
-  0%   {left:0px;}
+  0%   {left:0;}
   25%  {left:25%;}
   50%  {left:50%;}
   75%  {left:75%;}
